--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "./node_modules/.bin/eslint --fix --ext .js lib"
   },
   "author": "envake",
+  "contributors": [
+    "krmax44 <hi@krmax44.de>",
+    "arnebr (https://github.com/arnebr)"
+  ],
   "license": "ISC",
   "dependencies": {
     "node-fetch": "^3.2.8",
